add recipes folder and link to recipe files

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/baked-chicken.html">Baked Chicken</a>
+    <a href="./recipes/easy-fried-cabbage.html">Easy Fried Cabbage</a>
+    <a href="./recipes/kafta.html">Kafta</a>
+    <a href="./recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a>
   </body>
 </html>
