add image, description, ingridents and Steps

--- a/recipes/kafta.html
+++ b/recipes/kafta.html
@@ -8,5 +8,42 @@
   </head>
   <body>
     <h1>Kafta</h1>
+    <img src="../images/Kafta.webp" alt="Baked Chicken" />
+    <h3>Description</h3>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>1 ½ pounds lean ground beef</li>
+
+      <li>1 medium onion, grated</li>
+
+      <li>½ cup finely chopped fresh parsley</li>
+
+      <li>¼ teaspoon cayenne pepper</li>
+
+      <li>¼ teaspoon ground allspice</li>
+
+      <li>1 teaspoon salt, or to taste</li>
+
+      <li>¼ teaspoon black pepper</li>
+
+      <li>6 wooden or metal skewers</li>
+    </ul>
+    <h3>Stps</h3>
+    <ol>
+      <li>
+        Preheat an outdoor grill for high heat. If using wooden skewers, soak in
+        water.
+      </li>
+      <li>
+        In a large bowl, mix together the ground beef, onion, parsley, cayenne,
+        allspice, salt and pepper until evenly blended. Divide into 6 portions,
+        and press around one end of the skewers to form a log shape
+        approximately 1 inch thick and 6 inches long.
+      </li>
+      <li>
+        Grill for 10 to 15 minutes, turning occasionally, until meat is no
+        longer pink.
+      </li>
+    </ol>
   </body>
 </html>
