--- a/recipes/easy-fried-cabbage.html
+++ b/recipes/easy-fried-cabbage.html
@@ -8,5 +8,42 @@
   </head>
   <body>
     <h1>Easy Fried Cabbage</h1>
+    <img src="../images/Easy-Fried-Cabbage.webp" alt="Baked Chicken" />
+    <h3>Description</h3>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>2 tablespoons grapeseed oil</li>
+
+      <li>1 medium yellow onion, chopped</li>
+
+      <li>3 cloves garlic, chopped/li></li>
+
+      <li>2 teaspoons Cajun seasoning, or to taste, divided</li>
+
+      <li>½ red bell pepper, sliced</li>
+
+      <li>½ medium green bell pepper, sliced</li>
+
+      <li>1 medium head cabbage, thinly sliced</li>
+
+      <li>1 tablespoon butter, or more to taste (Optional)</li>
+
+      <li>1 salt and ground black pepper to taste</li>
+    </ul>
+    <h3>Stps</h3>
+    <ol>
+      <li>
+        Heat grapeseed oil in a large cast iron skillet over medium heat. Add
+        onions and cook until softened, about 3 minutes. Add garlic, stir, and
+        cook until fragrant, 1 to 2 minutes. Season with 1 teaspoon Cajun
+        seasoning and stir to combine.
+      </li>
+      <li>
+        Mix in red and green bell peppers; cook for 1 to 2 minutes Add cabbage,
+        remaining 1 teaspoon Cajun seasoning, and stir to combine. Add butter
+        and stir until melted. Simmer cabbage until it reaches desired softness,
+        about 15 minutes. Season with salt and pepper.
+      </li>
+    </ol>
   </body>
 </html>
