--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -8,5 +8,37 @@
   </head>
   <body>
     <h1>Watermelon Feta Salad</h1>
+    <img src="../images/Watermelon-Feta-Salad.webp" alt="Baked Chicken" />
+    <h3>Description</h3>
+    <p>
+      This is a great arugula and tomato salad with chunks of watermelon and
+      feta cheese. Thanks to the watermelon, the kids will like it also!
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>3 tablespoons olive oil</li>
+
+      <li>2 teaspoons white balsamic vinegar</li>
+
+      <li>½ teaspoon kosher salt</li>
+
+      <li>8 ounces grape tomatoes, halved</li>
+
+      <li>3 cups arugula</li>
+
+      <li>1 cup sliced red onion</li>
+
+      <li>2 pounds watermelon, cubed</li>
+
+      <li>4 ounces feta cheese, cut into 1/4-inch cubes</li>
+    </ul>
+    <h3>Stps</h3>
+    <ol>
+      <li>
+        Whisk olive oil, vinegar, and salt together in a large mixing bowl. Add
+        tomatoes, arugula, and red onion; toss to coat. Gently stir in
+        watermelon and feta cheese to serve.
+      </li>
+    </ol>
   </body>
 </html>
