Add 2 more recipes links

--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <a href="./recipes/easy-fried-cabbage.html">Easy Fried Cabbage</a>
     <a href="./recipes/kafta.html">Kafta</a>
     <a href="./recipes/watermelon-feta-salad.html">Watermelon Feta Salad</a>
+    <a href="./recipes/feta-chicken.html">Feta Chicken</a>
+    <a href="./recipes/mediterranean-greek-salad.html"
+      >Mediterranean Greek Salad</a
+    >
   </body>
 </html>
