--- a/recipes/baked-chicken.html
+++ b/recipes/baked-chicken.html
@@ -40,7 +40,7 @@
 
       <li>1 cup water</li>
     </ul>
-    <h3>Stps</h3>
+    <h3>Steps</h3>
     <ol>
       <li>Preheat oven to 400 degrees F (200 degrees C).</li>
       <li>
