--- a/recipes/easy-fried-cabbage.html
+++ b/recipes/easy-fried-cabbage.html
@@ -10,6 +10,11 @@
     <h1>Easy Fried Cabbage</h1>
     <img src="../images/Easy-Fried-Cabbage.webp" alt="Baked Chicken" />
     <h3>Description</h3>
+    <p>
+      Easy to make fried cabbage makes a great side dish or throw some smoked
+      sausage in there and make it a complete meal. Any way you have it, you'll
+      be pleased.
+    </p>
     <h3>Ingredients</h3>
     <ul>
       <li>2 tablespoons grapeseed oil</li>
@@ -30,7 +35,7 @@
 
       <li>1 salt and ground black pepper to taste</li>
     </ul>
-    <h3>Stps</h3>
+    <h3>Steps</h3>
     <ol>
       <li>
         Heat grapeseed oil in a large cast iron skillet over medium heat. Add
