--- a/recipes/feta-chicken.html
+++ b/recipes/feta-chicken.html
@@ -22,7 +22,7 @@
 
       <li>¼ cup Italian-style dry bread crumbs, divided</li>
     </ul>
-    <h3>Stps</h3>
+    <h3>Steps</h3>
     <ol>
       <li>
         Preheat oven to 350 degrees F (175 degrees C). Lightly grease a 9x13
