--- a/recipes/kafta.html
+++ b/recipes/kafta.html
@@ -10,6 +10,14 @@
     <h1>Kafta</h1>
     <img src="../images/Kafta.webp" alt="Baked Chicken" />
     <h3>Description</h3>
+    <p>
+      The yummiest preparation mixture for ground beef EVER! I have made this
+      Lebanese Meat for all of my friends and family and have HAD to leave the
+      recipe with everyone! Meat mixture can be used for everything...
+      meatballs, meatloaf, BBQ skewers, BBQ'd hamburgers. FOR BEST, AUTHENTIC
+      LEBANESE TASTE, DO NOT OMIT OR SUBSTITUTE INGREDIENTS (until you have made
+      it this way ;P )
+    </p>
     <h3>Ingredients</h3>
     <ul>
       <li>1 ½ pounds lean ground beef</li>
@@ -28,7 +36,7 @@
 
       <li>6 wooden or metal skewers</li>
     </ul>
-    <h3>Stps</h3>
+    <h3>Steps</h3>
     <ol>
       <li>
         Preheat an outdoor grill for high heat. If using wooden skewers, soak in
