--- a/recipes/mediterranean-greek-salad.html
+++ b/recipes/mediterranean-greek-salad.html
@@ -29,7 +29,7 @@
       <li>⅓ cup diced oil packed sun-dried tomatoes, drained, oil reserved</li>
       <li>½ red onion, sliced</li>
     </ul>
-    <h3>Stps</h3>
+    <h3>Steps</h3>
     <ol>
       <li>
         In a large salad bowl, toss together the cucumbers, feta cheese, olives,
