--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -32,7 +32,7 @@
 
       <li>4 ounces feta cheese, cut into 1/4-inch cubes</li>
     </ul>
-    <h3>Stps</h3>
+    <h3>Steps</h3>
     <ol>
       <li>
         Whisk olive oil, vinegar, and salt together in a large mixing bowl. Add
