--- a/recipes/feta-chicken.html
+++ b/recipes/feta-chicken.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes- Kafta</title>
   </head>
   <body>
-    <h1>Kafta</h1>
+    <h1>Feta Chicken</h1>
     <img src="../images/Feta-chicken.webp" alt="Baked Chicken" />
     <h3>Description</h3>
     <p>
