--- a/recipes/mediterranean-greek-salad.html
+++ b/recipes/mediterranean-greek-salad.html
@@ -7,12 +7,13 @@
     <title>Odin Recipes- Kafta</title>
   </head>
   <body>
-    <h1>Kafta</h1>
+    <h1>Mediterranean Greek Salad</h1>
     <img
       src="../odin-recipes/images/Mediterranean-Greek-Salad.webp"
       alt="Baked Chicken"
     />
     <h3>Description</h3>
+    <
     <p>
       This is a great salad to take to a barbeque. All ingredients are
       approximate, so add more or less of any ingredient depending on your own
