--- a/recipes/baked-chicken.html
+++ b/recipes/baked-chicken.html
@@ -9,12 +9,16 @@
   <body>
     <h1>Baked Chicken</h1>
     <img src="../images/Baked-Chicken.webp" alt="Baked Chicken" />
+
     <h3>Description</h3>
+    <!-- Description -->
     <p>
       What I had to do to squeeze this recipe from my neighbor...but it's worth
       it. This is a scrumptious version of sticky chicken.
     </p>
+
     <h3>Ingredients</h3>
+    <!-- Ingredients -->
     <ul>
       <li>½ cup prepared barbecue sauce</li>
 
@@ -40,7 +44,9 @@
 
       <li>1 cup water</li>
     </ul>
+
     <h3>Steps</h3>
+    <!-- Steps -->
     <ol>
       <li>Preheat oven to 400 degrees F (200 degrees C).</li>
       <li>
