--- a/recipes/easy-fried-cabbage.html
+++ b/recipes/easy-fried-cabbage.html
@@ -9,13 +9,17 @@
   <body>
     <h1>Easy Fried Cabbage</h1>
     <img src="../images/Easy-Fried-Cabbage.webp" alt="Baked Chicken" />
+
     <h3>Description</h3>
+    <!-- Description -->
     <p>
       Easy to make fried cabbage makes a great side dish or throw some smoked
       sausage in there and make it a complete meal. Any way you have it, you'll
       be pleased.
     </p>
+
     <h3>Ingredients</h3>
+    <!-- Ingredients -->
     <ul>
       <li>2 tablespoons grapeseed oil</li>
 
@@ -35,7 +39,9 @@
 
       <li>1 salt and ground black pepper to taste</li>
     </ul>
+
     <h3>Steps</h3>
+    <!-- Steps -->
     <ol>
       <li>
         Heat grapeseed oil in a large cast iron skillet over medium heat. Add
