--- a/recipes/feta-chicken.html
+++ b/recipes/feta-chicken.html
@@ -9,12 +9,16 @@
   <body>
     <h1>Feta Chicken</h1>
     <img src="../images/Feta-chicken.webp" alt="Baked Chicken" />
+
     <h3>Description</h3>
+    <!-- Description -->
     <p>
       Chicken wrapped around tomato-basil feta cheese--simple, succulent, and
       sensational.
     </p>
+
     <h3>Ingredients</h3>
+    <!-- Ingredients -->
     <ul>
       <li>6 skinless, boneless chicken breast halves</li>
 
@@ -22,7 +26,9 @@
 
       <li>¼ cup Italian-style dry bread crumbs, divided</li>
     </ul>
+
     <h3>Steps</h3>
+    <!-- Steps -->
     <ol>
       <li>
         Preheat oven to 350 degrees F (175 degrees C). Lightly grease a 9x13
