--- a/recipes/kafta.html
+++ b/recipes/kafta.html
@@ -10,6 +10,7 @@
     <h1>Kafta</h1>
     <img src="../images/Kafta.webp" alt="Baked Chicken" />
     <h3>Description</h3>
+    <!-- Description -->
     <p>
       The yummiest preparation mixture for ground beef EVER! I have made this
       Lebanese Meat for all of my friends and family and have HAD to leave the
@@ -18,7 +19,9 @@
       LEBANESE TASTE, DO NOT OMIT OR SUBSTITUTE INGREDIENTS (until you have made
       it this way ;P )
     </p>
+
     <h3>Ingredients</h3>
+    <!-- Ingredients -->
     <ul>
       <li>1 ½ pounds lean ground beef</li>
 
@@ -36,7 +39,9 @@
 
       <li>6 wooden or metal skewers</li>
     </ul>
+
     <h3>Steps</h3>
+    <!-- Steps -->
     <ol>
       <li>
         Preheat an outdoor grill for high heat. If using wooden skewers, soak in
