--- a/recipes/mediterranean-greek-salad.html
+++ b/recipes/mediterranean-greek-salad.html
@@ -13,13 +13,16 @@
       alt="Baked Chicken"
     />
     <h3>Description</h3>
-    <
+    <!-- Description -->
+
     <p>
       This is a great salad to take to a barbeque. All ingredients are
       approximate, so add more or less of any ingredient depending on your own
       taste.
     </p>
+
     <h3>Ingredients</h3>
+    <!-- Ingredients -->
     <ul>
       <li>3 cucumbers, seeded and sliced</li>
 
@@ -30,7 +33,9 @@
       <li>⅓ cup diced oil packed sun-dried tomatoes, drained, oil reserved</li>
       <li>½ red onion, sliced</li>
     </ul>
+
     <h3>Steps</h3>
+    <!-- Steps -->
     <ol>
       <li>
         In a large salad bowl, toss together the cucumbers, feta cheese, olives,
