--- a/recipes/watermelon-feta-salad.html
+++ b/recipes/watermelon-feta-salad.html
@@ -9,12 +9,16 @@
   <body>
     <h1>Watermelon Feta Salad</h1>
     <img src="../images/Watermelon-Feta-Salad.webp" alt="Baked Chicken" />
+
     <h3>Description</h3>
+    <!-- Description -->
     <p>
       This is a great arugula and tomato salad with chunks of watermelon and
       feta cheese. Thanks to the watermelon, the kids will like it also!
     </p>
+
     <h3>Ingredients</h3>
+    <!-- Ingredients -->
     <ul>
       <li>3 tablespoons olive oil</li>
 
@@ -32,7 +36,9 @@
 
       <li>4 ounces feta cheese, cut into 1/4-inch cubes</li>
     </ul>
+
     <h3>Steps</h3>
+    <!-- Steps -->
     <ol>
       <li>
         Whisk olive oil, vinegar, and salt together in a large mixing bowl. Add
