--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img
+      src="./images/professional-cuisine.webp"
+      alt="illustration of a professional chef"
+    />
     <ul>
       <li>
         <a href="./recipes/baked-chicken.html">Baked Chicken</a>
