Add width and height to the image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img
       src="./images/professional-cuisine.webp"
       alt="illustration of a professional chef"
+      style="width: 800px; height: 450px"
     />
     <ul>
       <li>
