Fixed the image path

--- a/recipes/mediterranean-greek-salad.html
+++ b/recipes/mediterranean-greek-salad.html
@@ -8,10 +8,7 @@
   </head>
   <body>
     <h1>Mediterranean Greek Salad</h1>
-    <img
-      src="../odin-recipes/images/Mediterranean-Greek-Salad.webp"
-      alt="Baked Chicken"
-    />
+    <img src="../images/Mediterranean-Greek-Salad.webp" alt="Baked Chicken" />
     <h3>Description</h3>
     <!-- Description -->
 
